--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
-[database]
-username = user
-password = pass
-hostname = localhost
-port = 3306
-database = test
+[xdatabase]
+xusername = user
+xpassword = pass
+xhostname = localhost
+xport = 3306
+xdatabase = test
