using loxcommon logging

--- a/loauth.ini
+++ b/loauth.ini
@@ -4,3 +4,8 @@ port = 5000
 [database]
 type = sqlite3
 filename = loauth-db.sqlite3
+
+[logging]
+console = True
+logfile = ./loauth.log
+format = %(asctime)s - %(module)s.%(name)s %(lineno)s: %(levelname)s - %(message)s
